[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "calculation games"
authors = ["Alina Nikitina <silumain@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Bishamontess/python-project-49"
classifiers = ["Private :: Environment :: Console"]
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_games:brain_even"
brain-calc = "brain_games.scripts.brain_games:brain_calc"
brain-gcd = "brain_games.scripts.brain_games:brain_gcd"
brain-progression = "brain_games.scripts.brain_games:brain_progression"
brain-prime = "brain_games.scripts.brain_games:brain_prime"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
